Basic folder structure, created CSSObject class

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <script src="lib/CSSObject.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
