Fix CSSObject class.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <header>
+      <h1><code>CSSObject</code></h1>
+      <hr>
+      <p></p>
+    </header>
+
     <script src="lib/CSSObject.js"></script>
     <script src="script.js"></script>
   </body>
