--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <header>
-      <h1><code>CSSObject</code></h1>
-      <hr>
-      <p></p>
-    </header>
-
+    <h3>Using CSSObject w/encapsulated web components</h3>
+    <test-el>
+    </test-el>
+    <hr>
+    <h3>Class 'Inheritance'</h3>
+    <button b4="lolol" aphtr="omg">xd</button>
     <script src="lib/CSSObject.js"></script>
     <script src="script.js"></script>
   </body>
