Start website; header done

--- a/index.html
+++ b/index.html
@@ -2,17 +2,28 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h3>Using CSSObject w/encapsulated web components</h3>
-    <test-el>
-    </test-el>
+    <header>
+      <h1>
+        <code>CSSObject</code>
+        <a title="CSSObject on Github" style="float:right"
+          href="https://github.com/raghav-misra/CSSObject">
+          <i data-feather="github"></i>
+        </a>
+      </h1>
+      <p>
+        A simple, yet intuitive CSS-in-JS library built with the power of ES6.
+      </p>
+    </header>
     <hr>
-    <h3>Class 'Inheritance'</h3>
-    <button b4="lolol" aphtr="omg">xd</button>
+
+    <script 
+    src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js">
+    </script>
     <script src="lib/CSSObject.js"></script>
     <script src="script.js"></script>
   </body>
